2008-06-03  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Add ::gzip, ::gunzip, ::deflate and ::inflate.
	* lib/rubygems/server.rb:  Add specs and latest_specs indicies.

2008-06-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Remove double slash in
	#installation_path.  Fixes bug #19896 by Heiko Seebach.
	* lib/rubygems/remote_fetcher.rb:  Require StringIO.  Fixes bug #19866
	by Caleb Land.
	* lib/rubygems.rb:  Require rubygems/defaults/#{RBX_ENGINE}.rb and
	rubygem/defaults/operating_system.rb if they exist.  (OS require comes
	first and may be overridden by operating system.)

2008-06-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Ensure identical names, versions and
	platforms are identical for a smaller index.
	* lib/rubygems/spec_fetcher.rb:  Only write to cache when we own it.
	* lib/rubygems.rb:  Honor default_path if GEM_PATH environment
	variable is not set.  Patch #19502 by Donavan Pantke.
	* lib/rubygems/installer.rb:  Set file mode indicated by tar file.
	Patch #19737 by Jason Roelofs.

2008-06-01  John Barnette <jbarnette@rubyforge.org>

	* lib/rubygems.rb: Add Gem.available?(gem, *specs) for easy availability
	checks at runtime.

2008-05-31  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/dependency_command.rb:  Delay fetching specs
	until needed.  Reverse dependencies can no longer be calculated for
	remote sources.  Add backwards compatibility.
	* lib/rubygems/commands/fetch_command.rb:  Add backwards
	compatibility.

2008-05-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  --sources option should not
	add URIs to Gem.sources.
	* lib/rubygems/spec_fetcher.rb:  Add #warn_legacy to help handling
	legacy sources.
	* luby/rubygems/commands/query_command.rb:  Add backwards
	compatibility with legacy sources.

2008-05-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Add #uri to
	Gem::RemoteFetcher::FetchError.